<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.generalUser.MainActivity">

    <TextView
        android:id="@+id/main_welcome"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_welcome" />

    <EditText
        android:id="@+id/password"
        android:layout_width="322dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:layout_marginTop="43dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/main_register_button"
        android:layout_width="147dp"
        android:layout_height="74dp"
        android:layout_marginTop="48dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
