...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_placeholder"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/job_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/request_btn"
                android:layout_width="74dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="10dp"
...
