<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.generalUser.RegisterActivity"
    android:id="@+id/register_view">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="216dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_first_name" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="221dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="E-Mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_last_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="218dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="109dp"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>